--- a/exam-editor.html
+++ b/exam-editor.html
@@ -1181,6 +1181,23 @@
                 let content = e.target.result;
                 content = content.replace(/(?<!\\)%.*/g, ''); // Xóa comment
 
+                // --- [QUAN TRỌNG] FIX LỖI IMPORT BỊ MẤT NỘI DUNG ---
+                // Chuyển đổi array sang matrix NGAY LẬP TỨC để đơn giản hóa cấu trúc ngoặc {}.
+                // Điều này giúp hàm extractNextBrace không bị đếm sai ngoặc khi tách \loigiai và \choiceTF.
+                
+                // 1. Chuyển array -> matrix
+                content = content.replace(/\\begin\{array\}(\{.*?\})?/g, '\\begin{matrix}');
+                content = content.replace(/\\end\{array\}/g, '\\end{matrix}');
+                
+                // 2. (Tuỳ chọn) Chuyển luôn \heva thủ công nếu cần, nhưng quan trọng nhất là array
+                // Vì \heva thường dùng trong \loigiai, nếu để nguyên cũng có thể gây lỗi đếm ngoặc nếu viết dạng \heva{
+                if (content.includes('\\heva')) {
+                     // Thay thế sơ bộ để tránh lỗi parser
+                     content = content.replace(/\\heva\s*\{/g, '\\left\\{\\begin{matrix}');
+                     // Lưu ý: Việc đóng ngoặc } sẽ do logic parser phía sau tự xử lý dựa trên độ sâu (depth)
+                }
+                // ----------------------------------------------------
+
                 pendingImageUploads = [];
                 const blockRegex = /\\begin\{(ex|bt|vd)\}([\s\S]*?)\\end\{\1\}/g;
                 let match, count = 0;
