--- a/dashboard.html
+++ b/dashboard.html
@@ -269,9 +269,15 @@
         <div id="view-course-manager" class="view-section hidden flex-1 flex flex-col h-full bg-white">
             <div class="h-16 border-b border-gray-200 flex items-center justify-between px-6 bg-white shrink-0 z-10 shadow-sm">
                 <h2 class="text-xl font-bold text-gray-800"><i class="fa-solid fa-shapes text-orange-500 mr-2"></i>Quản lý Trang chủ & Khóa học</h2>
-                <button onclick="window.openCourseModal()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-bold shadow-md transition-all text-sm flex items-center gap-2">
-                    <i class="fa-solid fa-plus"></i> Thêm khóa mới
-                </button>
+                
+                <div class="flex gap-2">
+                    <button onclick="window.openHeroModal()" class="px-4 py-2 bg-orange-100 text-orange-600 hover:bg-orange-200 rounded-lg font-bold transition-all text-sm flex items-center gap-2">
+                        <i class="fa-solid fa-pen-nib"></i> Sửa Banner
+                    </button>
+                    <button onclick="window.openCourseModal()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-bold shadow-md transition-all text-sm flex items-center gap-2">
+                        <i class="fa-solid fa-plus"></i> Thêm khóa mới
+                    </button>
+                </div>
             </div>
             <div class="flex-1 overflow-y-auto p-6 bg-gray-50">
                 <div id="adminCourseList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -432,6 +438,37 @@
             <div class="p-4 border-t border-gray-100 bg-gray-50 flex justify-end gap-3 rounded-b-2xl">
                 <button onclick="window.toggleModal('courseModal', false)" class="px-4 py-2 bg-white border rounded-lg font-bold text-gray-600 hover:bg-gray-50">Hủy</button>
                 <button onclick="window.saveCourse()" class="px-6 py-2 bg-blue-600 text-white rounded-lg font-bold shadow-lg hover:bg-blue-700">Lưu khóa học</button>
+            </div>
+        </div>
+    </div>
+    <div id="heroModal" class="modal opacity-0 pointer-events-none fixed inset-0 z-[95] flex items-center justify-center bg-gray-900 bg-opacity-60 px-4">
+        <div class="modal-container bg-white w-full max-w-2xl rounded-2xl shadow-2xl transform scale-95 transition-transform duration-300 flex flex-col max-h-[90vh]">
+            <div class="p-4 border-b border-gray-100 flex justify-between items-center bg-orange-50 rounded-t-2xl">
+                <h3 class="font-bold text-orange-800 text-lg"><i class="fa-solid fa-image mr-2"></i>Cài đặt Banner Trang chủ</h3>
+                <button onclick="window.toggleModal('heroModal', false)" class="text-gray-400 hover:text-red-500"><i class="fa-solid fa-times text-xl"></i></button>
+            </div>
+            <div class="p-6 overflow-y-auto space-y-4">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div class="col-span-2">
+                        <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Ảnh minh họa (Bên phải)</label>
+                        <div class="flex items-center gap-4">
+                            <img id="heroImgPreview" src="https://via.placeholder.com/150" class="w-20 h-20 object-contain border rounded-lg bg-gray-50">
+                            <button onclick="document.getElementById('heroImgInput').click()" class="px-4 py-2 bg-white border border-blue-300 text-blue-600 rounded-lg text-sm font-bold hover:bg-blue-50">Tải ảnh mới (R2)</button>
+                            <input type="file" id="heroImgInput" class="hidden" accept="image/*" onchange="window.handleHeroImageUpload(this)">
+                        </div>
+                    </div>
+                    <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Tiêu đề lớn (Dòng 1)</label><input type="text" id="hTitle1" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none font-bold" placeholder="KHÓA HỌC TOÀN DIỆN"></div>
+                    <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Tiêu đề màu (Dòng 2)</label><input type="text" id="hTitle2" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none font-black text-orange-500" placeholder="ĐÁNH GIÁ TƯ DUY"></div>
+                    <div><label class="block text-xs font-bold text-gray-700 mb-1">Tag 1 (Xanh)</label><input type="text" id="hTag1" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none" placeholder="30 ĐỀ TSA"></div>
+                    <div><label class="block text-xs font-bold text-gray-700 mb-1">Tag 2 (Xanh)</label><input type="text" id="hTag2" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none" placeholder="25+ BÀI GIẢNG"></div>
+                    <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Mô tả ngắn</label><input type="text" id="hDesc" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none" placeholder="Hệ thống ôn luyện..."></div>
+                    <div><label class="block text-xs font-bold text-gray-700 mb-1">Tên nút bấm</label><input type="text" id="hBtnText" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none" placeholder="XEM LỘ TRÌNH NGAY"></div>
+                    <div><label class="block text-xs font-bold text-gray-700 mb-1">Link nút bấm</label><input type="text" id="hBtnLink" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-orange-100 outline-none" placeholder="#courses-section"></div>
+                </div>
+            </div>
+            <div class="p-4 border-t border-gray-100 bg-gray-50 flex justify-end gap-3 rounded-b-2xl">
+                <button onclick="window.toggleModal('heroModal', false)" class="px-4 py-2 bg-white border rounded-lg font-bold text-gray-600 hover:bg-gray-50">Hủy</button>
+                <button onclick="window.saveHeroSettings()" class="px-6 py-2 bg-orange-500 text-white rounded-lg font-bold shadow-lg hover:bg-orange-600">Lưu cài đặt</button>
             </div>
         </div>
     </div>
@@ -1589,6 +1626,59 @@
                 window.loadAdminCourses();
             }
         };       
+        // --- LOGIC QUẢN LÝ BANNER (HERO SECTION) ---
+        let currentHeroImg = "";
+
+        window.openHeroModal = async () => {
+            window.showNotification("Đang tải cấu hình...", "info");
+            try {
+                // Lấy dữ liệu từ bảng settings
+                const docSnap = await getDoc(doc(db, "site_settings", "homepage_hero"));
+                if (docSnap.exists()) {
+                    const d = docSnap.data();
+                    document.getElementById('hTitle1').value = d.title1 || "";
+                    document.getElementById('hTitle2').value = d.title2 || "";
+                    document.getElementById('hTag1').value = d.tag1 || "";
+                    document.getElementById('hTag2').value = d.tag2 || "";
+                    document.getElementById('hDesc').value = d.desc || "";
+                    document.getElementById('hBtnText').value = d.btnText || "";
+                    document.getElementById('hBtnLink').value = d.btnLink || "";
+                    currentHeroImg = d.image || "";
+                    if(currentHeroImg) document.getElementById('heroImgPreview').src = currentHeroImg;
+                }
+                window.toggleModal('heroModal', true);
+            } catch(e) { window.showNotification("Lỗi tải: " + e.message, "error"); }
+        };
+
+        window.handleHeroImageUpload = async (input) => {
+            if(!input.files[0]) return;
+            window.showNotification("Đang tải ảnh banner...", "info");
+            try {
+                const url = await uploadToR2(input.files[0]);
+                currentHeroImg = url;
+                document.getElementById('heroImgPreview').src = url;
+                window.showNotification("Đã tải ảnh xong!");
+            } catch(e) { window.showNotification("Lỗi: " + e.message, "error"); }
+        };
+
+        window.saveHeroSettings = async () => {
+            const data = {
+                title1: document.getElementById('hTitle1').value,
+                title2: document.getElementById('hTitle2').value,
+                tag1: document.getElementById('hTag1').value,
+                tag2: document.getElementById('hTag2').value,
+                desc: document.getElementById('hDesc').value,
+                btnText: document.getElementById('hBtnText').value,
+                btnLink: document.getElementById('hBtnLink').value,
+                image: currentHeroImg,
+                updatedAt: new Date().toISOString()
+            };
+            try {
+                await setDoc(doc(db, "site_settings", "homepage_hero"), data);
+                window.showNotification("Đã lưu Banner thành công!", "success");
+                window.toggleModal('heroModal', false);
+            } catch(e) { window.showNotification("Lỗi lưu: " + e.message, "error"); }
+        };
         document.getElementById('logoutBtn').onclick = async () => { if(await window.customConfirm("Bạn có chắc muốn đăng xuất?")) signOut(auth).then(()=>window.location.href="index.html"); }
         // Hàm xóa ảnh trên R2 thông qua Worker
         async function deleteR2Image(fileUrl) {
