--- a/index.html
+++ b/index.html
@@ -89,29 +89,29 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full grid grid-cols-1 lg:grid-cols-2 gap-12 items-center relative z-10">
             <div class="space-y-6 md:space-y-8 text-center lg:text-left order-2 lg:order-1">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-black text-gray-800 leading-tight">
-                    KHÓA HỌC TOÀN DIỆN <br>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">ĐÁNH GIÁ TƯ DUY</span>
+                    <span id="heroTitle1">KHÓA HỌC TOÀN DIỆN</span> <br>
+                    <span id="heroTitle2" class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">ĐÁNH GIÁ TƯ DUY</span>
                 </h1>
                 
                 <div class="flex flex-wrap justify-center lg:justify-start gap-2 md:gap-4">
-                    <span class="bg-teal-700 text-white px-3 py-1.5 md:px-4 md:py-2 rounded-lg font-bold text-xs md:text-sm shadow-md">30 ĐỀ TSA</span>
-                    <span class="bg-teal-700 text-white px-3 py-1.5 md:px-4 md:py-2 rounded-lg font-bold text-xs md:text-sm shadow-md">25+ BÀI GIẢNG</span>
+                    <span id="heroTag1" class="bg-teal-700 text-white px-3 py-1.5 md:px-4 md:py-2 rounded-lg font-bold text-xs md:text-sm shadow-md">30 ĐỀ TSA</span>
+                    <span id="heroTag2" class="bg-teal-700 text-white px-3 py-1.5 md:px-4 md:py-2 rounded-lg font-bold text-xs md:text-sm shadow-md">25+ BÀI GIẢNG</span>
                 </div>
 
-                <p class="text-base md:text-lg text-gray-600 font-medium max-w-2xl mx-auto lg:mx-0 border-l-4 border-accent pl-4">
+                <p id="heroDesc" class="text-base md:text-lg text-gray-600 font-medium max-w-2xl mx-auto lg:mx-0 border-l-4 border-accent pl-4">
                     Hệ thống ôn luyện toán tư duy, bám sát cấu trúc đề thi mới nhất.
                 </p>
 
                 <div class="pt-4">
-                    <button onclick="document.getElementById('courses-section').scrollIntoView({behavior: 'smooth'})" class="px-6 py-3 md:px-8 md:py-4 bg-accent text-white font-black rounded-xl shadow-xl shadow-orange-200 hover-bg-accent hover:shadow-2xl transition-all uppercase tracking-wider text-base md:text-lg transform hover:scale-105">
+                    <a id="heroBtn" href="#courses-section" class="inline-block px-6 py-3 md:px-8 md:py-4 bg-accent text-white font-black rounded-xl shadow-xl shadow-orange-200 hover-bg-accent hover:shadow-2xl transition-all uppercase tracking-wider text-base md:text-lg transform hover:scale-105">
                         XEM LỘ TRÌNH NGAY
-                    </button>
+                    </a>
                 </div>
             </div>
 
             <div class="relative order-1 lg:order-2">
                 <div class="relative w-full aspect-square max-w-sm md:max-w-lg mx-auto">
-                    <img src="https://drive.google.com/uc?export=view&id=1svtjD5yUgdriWj_KhBxn6_k4rn081gxa" alt="Math 3D" class="w-full h-full object-contain animate-float drop-shadow-2xl">
+                    <img id="heroImage" src="https://drive.google.com/uc?export=view&id=1svtjD5yUgdriWj_KhBxn6_k4rn081gxa" alt="Math 3D" class="w-full h-full object-contain animate-float drop-shadow-2xl">
                 </div>
             </div>
         </div>
@@ -309,6 +309,25 @@
 
         // Gọi hàm ngay khi trang web tải xong
         renderCoursesFromDB();
+        // --- LOGIC HIỂN THỊ BANNER TỪ DATABASE ---
+        async function loadHeroSettings() {
+            try {
+                const docSnap = await getDoc(doc(db, "site_settings", "homepage_hero"));
+                if (docSnap.exists()) {
+                    const d = docSnap.data();
+                    if(d.title1) document.getElementById('heroTitle1').innerText = d.title1;
+                    if(d.title2) document.getElementById('heroTitle2').innerText = d.title2;
+                    if(d.tag1) document.getElementById('heroTag1').innerText = d.tag1;
+                    if(d.tag2) document.getElementById('heroTag2').innerText = d.tag2;
+                    if(d.desc) document.getElementById('heroDesc').innerText = d.desc;
+                    if(d.btnText) document.getElementById('heroBtn').innerText = d.btnText;
+                    if(d.btnLink) document.getElementById('heroBtn').href = d.btnLink;
+                    if(d.image) document.getElementById('heroImage').src = d.image;
+                }
+            } catch (e) { console.warn("Chưa có cấu hình Banner:", e); }
+        }
+        
+        loadHeroSettings();
         const emailInput = document.getElementById('emailInput');
         const passwordInput = document.getElementById('passwordInput');
         const submitBtn = document.getElementById('submitBtn');
