--- a/dashboard.html
+++ b/dashboard.html
@@ -1671,13 +1671,20 @@
                 btnText: document.getElementById('hBtnText').value,
                 btnLink: document.getElementById('hBtnLink').value,
                 image: currentHeroImg,
+                imagePosition: document.getElementById('hImgPos').value,
                 updatedAt: new Date().toISOString()
             };
             try {
-                await setDoc(doc(db, "site_settings", "homepage_hero"), data);
+                // QUAN TRỌNG: Tên bảng ở đây là "site_settings"
+                // Nó phải GIỐNG HỆT tên trong Rules: match /site_settings/{docId}
+                await setDoc(doc(db, "site_settings", "homepage_hero"), data, { merge: true });
+                
                 window.showNotification("Đã lưu Banner thành công!", "success");
                 window.toggleModal('heroModal', false);
-            } catch(e) { window.showNotification("Lỗi lưu: " + e.message, "error"); }
+            } catch(e) { 
+                console.error("Chi tiết lỗi:", e); // Xem kỹ lỗi trong Console (F12)
+                window.showNotification("Lỗi lưu: " + e.message + " (Code: " + e.code + ")", "error"); 
+            }
         };
         document.getElementById('logoutBtn').onclick = async () => { if(await window.customConfirm("Bạn có chắc muốn đăng xuất?")) signOut(auth).then(()=>window.location.href="index.html"); }
         // Hàm xóa ảnh trên R2 thông qua Worker
