--- a/index.html
+++ b/index.html
@@ -233,11 +233,10 @@
     </script>
 
     <script type="module">
-        <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, updateProfile } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-        // Đã thêm getDoc vào danh sách
-        import { getFirestore, doc, getDoc, setDoc, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        // ▼▼▼ ĐÃ CẬP NHẬT DÒNG DƯỚI ▼▼▼
+        import { getFirestore, doc, setDoc, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
         // FIREBASE CONFIG
         const firebaseConfig = {
@@ -311,17 +310,11 @@
         // Gọi hàm ngay khi trang web tải xong
         renderCoursesFromDB();
         // --- LOGIC HIỂN THỊ BANNER TỪ DATABASE ---
-        // --- LOGIC HIỂN THỊ BANNER TỪ DATABASE ---
         async function loadHeroSettings() {
             try {
-                // Lấy dữ liệu từ bảng site_settings/homepage_hero
-                const docRef = doc(db, "site_settings", "homepage_hero");
-                const docSnap = await getDoc(docRef);
-
+                const docSnap = await getDoc(doc(db, "site_settings", "homepage_hero"));
                 if (docSnap.exists()) {
                     const d = docSnap.data();
-                    console.log("Dữ liệu Banner:", d); // Dòng này giúp bạn kiểm tra trong Console (F12)
-
                     if(d.title1) document.getElementById('heroTitle1').innerText = d.title1;
                     if(d.title2) document.getElementById('heroTitle2').innerText = d.title2;
                     if(d.tag1) document.getElementById('heroTag1').innerText = d.tag1;
@@ -329,19 +322,9 @@
                     if(d.desc) document.getElementById('heroDesc').innerText = d.desc;
                     if(d.btnText) document.getElementById('heroBtn').innerText = d.btnText;
                     if(d.btnLink) document.getElementById('heroBtn').href = d.btnLink;
-                    
-                    // Cập nhật ảnh và vị trí
-                    if(d.image) {
-                        const img = document.getElementById('heroImage');
-                        img.src = d.image;
-                        if(d.imagePosition) img.style.objectPosition = d.imagePosition;
-                    }
-                } else {
-                    console.log("Chưa có cấu hình banner trong Database.");
+                    if(d.image) document.getElementById('heroImage').src = d.image;
                 }
-            } catch (e) { 
-                console.error("Lỗi tải Banner:", e); 
-            }
+            } catch (e) { console.warn("Chưa có cấu hình Banner:", e); }
         }
         
         loadHeroSettings();
