--- a/exam-editor.html
+++ b/exam-editor.html
@@ -1035,16 +1035,25 @@
         }
 
         // Hàm ép TikZJax chạy lại để vẽ hình
+        // Hàm ép TikZJax chạy lại (Phiên bản cache-busting)
         window.renderTikz = () => {
             const scripts = document.querySelectorAll('script[type="text/tikz"]');
             if (scripts.length === 0) return;
 
-            // Xóa thẻ script cũ và thêm lại để kích hoạt quét DOM
+            console.log("Đang kích hoạt TikZJax cho " + scripts.length + " hình...");
+
+            // 1. Tìm và xóa thẻ script TikZJax cũ
             const oldScript = document.querySelector('script[src*="tikzjax.js"]');
             if (oldScript) oldScript.remove();
 
+            // 2. Thêm lại thẻ script mới với timestamp để tránh cache
             const newScript = document.createElement('script');
-            newScript.src = "https://tikzjax.com/v1/tikzjax.js";
+            newScript.src = "https://tikzjax.com/v1/tikzjax.js?v=" + Date.now();
+            
+            // Log khi tải xong để kiểm tra
+            newScript.onload = () => console.log("TikZJax đã tải xong!");
+            newScript.onerror = () => console.error("Lỗi tải TikZJax!");
+            
             document.head.appendChild(newScript);
         };
         window.renderPreviewList = () => { 
